# Glance

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: eval.py  harness.py  make_synthetic_trace.py  video_to_frames.py
bench/suite/: README.md  analyze.py  catalog.py  loop.py  model.py  preflight.py  report.py  runner.py  tasks.py  verifiers.py
examples/: README.md  anthropic_loop.py  claude_code_mcp.json  run_browser_agent.py
glance/: __init__.py  accessibility.py  cache.py  decide.py  diff.py  display.py  keys.py  mcp_server.py  metrics.py  observer.py  policy.py  telemetry.py
hooks/: README.md  analyze.py  glance_hook.py  session_report.py  settings.snippet.json
tests/: test_accessibility.py  test_accuracy.py  test_cache.py  test_decide.py  test_diff.py  test_display.py  test_keys.py  test_metrics.py  test_observer.py  test_server.py  test_suite.py  test_telemetry.py  test_video.py
