[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glance-cua"
version = "0.1.0"
description = "Make Claude glance, not stare — a drop-in efficiency layer for computer-use agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sovit" }]
keywords = ["claude", "computer-use", "agents", "llm", "efficiency", "anthropic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
]
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.5"]
examples = ["anthropic>=0.40", "playwright>=1.40"]
mcp = ["mcp>=1.2", "pyautogui>=0.9.54", "pillow>=10.0"]

[project.scripts]
glance-cua = "glance.mcp_server:main"

[project.urls]
Homepage = "https://github.com/soovittt/Glance"
Issues = "https://github.com/soovittt/Glance/issues"

[tool.hatch.build.targets.wheel]
packages = ["glance"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# illustrative scaffolds: intentionally-unused setup vars are fine
"examples/*" = ["F841"]
